ajustes do caminho das imgs

--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -17,7 +17,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img id="img_width_height" src="../components/img/html5.png" class="card-img-top mx-auto" alt="icone_html5">
+                        <img id="img_width_height" src="components/img/html5.png" class="card-img-top mx-auto" alt="icone_html5">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">HTML5</p>
@@ -27,7 +27,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img id="img_width_height" src="../components/img/css3.png" class="card-img-top mx-auto" alt="icone_css3">
+                        <img id="img_width_height" src="components/img/css3.png" class="card-img-top mx-auto" alt="icone_css3">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">CSS3</p>
@@ -37,7 +37,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img id="img_width_height" src="../components/img/javascript.png" class="card-img-top mx-auto" alt="icone_JavaScript">
+                        <img id="img_width_height" src="components/img/javascript.png" class="card-img-top mx-auto" alt="icone_JavaScript">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">JAVASCRIPT</p>
@@ -47,7 +47,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img id="img_width_height" src="../components/img/bootstrap.png" class="card-img-top mx-auto" alt="icone_Bootstrap">
+                        <img id="img_width_height" src="components/img/bootstrap.png" class="card-img-top mx-auto" alt="icone_Bootstrap">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">BOOTSTRAP</p>
@@ -57,7 +57,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img id="img_width_height" src="../components/img/jquery.png" class="card-img-top mx-auto" alt="icone_jquery">
+                        <img id="img_width_height" src="components/img/jquery.png" class="card-img-top mx-auto" alt="icone_jquery">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">JQUERY</p>
@@ -67,7 +67,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img id="img_width" src="../components/img/React-icon.svg" class="card-img-top mx-auto" alt="icone_react">
+                        <img id="img_width" src="components/img/React-icon.svg" class="card-img-top mx-auto" alt="icone_react">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">REACT</p>
@@ -77,7 +77,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img id="img_width_height" src="../components/img/vue.png" class="card-img-top mx-auto" alt="icone_vue">
+                        <img id="img_width_height" src="components/img/vue.png" class="card-img-top mx-auto" alt="icone_vue">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">VUE</p>
@@ -87,7 +87,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img id="img_height" src="../components/img/python.png" class="card-img-top mx-auto" alt="icone_python">
+                        <img id="img_height" src="components/img/python.png" class="card-img-top mx-auto" alt="icone_python">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">PYTHON</p>
@@ -97,7 +97,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img id="img_width_height" src="../components/img/flask.png" class="card-img-top mx-auto" alt="icone_flask">
+                        <img id="img_width_height" src="components/img/flask.png" class="card-img-top mx-auto" alt="icone_flask">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">FLASK</p>
@@ -107,7 +107,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body d-flex justify-content-center align-items-center flex-wrap">
-                        <img id="img_width" src="../components/img/php.png" class="card-img-top mx-auto" alt="icone_php">
+                        <img id="img_width" src="components/img/php.png" class="card-img-top mx-auto" alt="icone_php">
                     </div>
                     <div class="card-footer">
                         <p class="card-text">PHP</p>
@@ -117,7 +117,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img id="img_height" src="../components/img/postgresql.png" class="card-img-top mx-auto" alt="icone_postgresql">
+                        <img id="img_height" src="components/img/postgresql.png" class="card-img-top mx-auto" alt="icone_postgresql">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">POSTGRESQL</p>
@@ -127,7 +127,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img id="img_width_height" src="../components/img/joomla.png" class="card-img-top mx-auto" alt="icone_joomla">
+                        <img id="img_width_height" src="components/img/joomla.png" class="card-img-top mx-auto" alt="icone_joomla">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">JOOMLA</p>
@@ -137,7 +137,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img id="img_width_height" src="../components/img/wordpress.png" class="card-img-top mx-auto" alt="icone_wordpress">
+                        <img id="img_width_height" src="components/img/wordpress.png" class="card-img-top mx-auto" alt="icone_wordpress">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">WORDPRESS</p>
@@ -147,7 +147,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img id="img_width_height" src="../components/img/git.png" class="card-img-top mx-auto" alt="icone_git">
+                        <img id="img_width_height" src="components/img/git.png" class="card-img-top mx-auto" alt="icone_git">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">GIT</p>
@@ -157,7 +157,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img id="img_width_height" src="../components/img/github.png" class="card-img-top mx-auto" alt="icone_github">
+                        <img id="img_width_height" src="components/img/github.png" class="card-img-top mx-auto" alt="icone_github">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">GITHUB</p>
@@ -167,7 +167,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img id="img_width" src="../components/img/figma.png" class="card-img-top mx-auto" alt="icone_figma">
+                        <img id="img_width" src="components/img/figma.png" class="card-img-top mx-auto" alt="icone_figma">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">FIGMA</p>
