--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -16,13 +16,14 @@
 <body>
     <div class="col-12 col-sm-12 col-md-12 col-lg-12" id="cards">
         <h1>Projetos</h1>
-        <div class="row row-cols-2 row-col-sm-2 row-cols-md-3 row-col-lg-3 row-col-xl-3 row-col-xxl-3 g-3">
+        <div class="row row-cols-1 row-col-sm-2 row-cols-md-4 row-col-lg-4 row-col-xl-4 row-col-xxl-4 g-4">
+            <!-- PetLovers -->
             <div class="col">
                 <div class="card">
                     <div class="card-header">
                         <h2 class="card-title">🐱Pet Lovers CRUD🐶</h2>
                     </div>
-                    <img src="../components/img/printhome.png" class="card-img" alt="print_pet_lovers_crud">
+                    <img src="components/img/printPetLovers.png" class="card-img" alt="print_pet_lovers_crud">
                     <div class="card-body">
                         <h5 class="card-title">Seções</h5>
 
@@ -53,10 +54,11 @@
                     </div>
                     <div class="card-footer">
                         <h6 class="card-subtitle">
-                            <img id="img_width_height" src="../components/img/github.png" class="card-img mx-auto" alt="icone_github"> Repositório: <a class="card-link" href="https://github.com/Jana-SI/pet_lovers_crud">clique aqui</a></h6>
+                            <img id="img_width_height" src="components/img/github.png" class="card-img mx-auto" alt="icone_github"> Repositório: <a class="card-link" href="https://github.com/Jana-SI/pet_lovers_crud">clique aqui</a></h6>
                     </div>
                 </div>
             </div>
+            <!-- Cost -->
             <div class="col">
                 <div class="card">
                     <div class="card-header">
@@ -102,11 +104,12 @@
                         <h6 class="card-subtitle">💻 Curso: <a class="card-link"
                             href="https://www.youtube.com/playlist?list=PLnDvRpP8BneyVA0SZ2okm-QBojomniQVO">Curso de React - Matheus Battisti - Hora de Coda</a></h6>
                         <h6 class="card-subtitle">
-                            <img id="img_width_height" src="../components/img/github.png" class="card-img mx-auto" alt="icone_github"> Repositório: <a class="card-link"
+                            <img id="img_width_height" src="components/img/github.png" class="card-img mx-auto" alt="icone_github"> Repositório: <a class="card-link"
                             href="https://github.com/Jana-SI/costs_projeto_curso_react">clique aqui</a></h6>
                     </div>
                 </div>
             </div>
+            <!-- em breve -->
             <div class="col" id="card">
                 <div class="card text-center d-flex align-items-center justify-content-center">
                     <h4 class="card-title">Em breve</h4>
