ajustes na pagina projetos

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -3,12 +3,7 @@
 
 <head>
     <script type="text/javascript" src="components/scripts/ampulheta_a.js"></script>
-    <script type="text/javascript" src="components/scripts/ampulheta_b.js"></script>
-    <script type="text/javascript" src="components/scripts/ampulheta_c.js"></script>
-    <script type="text/javascript" src="components/scripts/ampulheta_d.js"></script>
-    <script type="text/javascript" src="components/scripts/ampulheta_e.js"></script>
-    <script type="text/javascript" src="components/scripts/ampulheta_f.js"></script>
-    <title>Projetos</title>
+    <script type="text/javascript" src="components/scripts/toggleDescricao.js"></script>
     <!--icon-->
     <link rel="icon" type="image/x-icon" href="components/img/favicon.ico">
 </head>
@@ -16,45 +11,65 @@
 <body>
     <div class="col-12 col-sm-12 col-md-12 col-lg-12" id="cards">
         <h1>Projetos</h1>
-        <div class="row row-cols-1 row-col-sm-2 row-cols-md-4 row-col-lg-4 row-col-xl-4 row-col-xxl-4 g-4">
+        <div class="row row-cols-1 row-col-sm-2 row-cols-md-3 row-col-lg-3 row-col-xl-3 row-col-xxl-3 g-4">
             <!-- PetLovers -->
             <div class="col">
                 <div class="card">
                     <div class="card-header">
-                        <h2 class="card-title">🐱Pet Lovers CRUD🐶</h2>
+                        <h5 class="card-title">🐱Pet Lovers CRUD🐶</h5>
                     </div>
                     <img src="components/img/printPetLovers.png" class="card-img" alt="print_pet_lovers_crud">
                     <div class="card-body">
-                        <h5 class="card-title">Seções</h5>
+                        <div class="card-text-more" style="display: none;">
+                            <h5 class="card-title">Seções</h5>
 
-                        <p class="card-text text-left">O site é composto por 3 seções:</p>
+                            <p class="card-text text-left">O site é composto por 3 seções:</p>
 
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">👤 Clientes: cadastrar, listar, pesquisar cliente especifico,
-                                deletar e atualizar (nome e telefone do cliente pesquisado);</li>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">👤 Clientes: cadastrar, listar, pesquisar cliente
+                                    especifico,
+                                    deletar e atualizar (nome e telefone do cliente pesquisado);</li>
 
-                            <li class="list-group-item">🐰 Pets: cadastrar, listar, pesquisar pet especifico, deletar,
-                                atualizar (nome, tipo, raça e data de nascimento do cliente pesquisado) e associar a
-                                mais um dono;</li>
+                                <li class="list-group-item">🐰 Pets: cadastrar, listar, pesquisar pet especifico,
+                                    deletar,
+                                    atualizar (nome, tipo, raça e data de nascimento do cliente pesquisado) e associar a
+                                    mais um dono;</li>
 
-                            <li class="list-group-item">🩺 Consulta: agendar, listar, pesquisar historico de consultas
-                                do pet, consultas do dia, proximas consultas, historico total de consultas, deletar e
-                                atualizar (data e hora das próximas consultas).</li>
-                        </ul>
+                                <li class="list-group-item">🩺 Consulta: agendar, listar, pesquisar historico de
+                                    consultas
+                                    do pet, consultas do dia, proximas consultas, historico total de consultas, deletar
+                                    e
+                                    atualizar (data e hora das próximas consultas).</li>
+                            </ul>
 
-                        <p class="card-text">Tecnologias utilizadas neste site:</p>
-                        <div class="text-center">
-                            <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" />
-                            <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" />
-                            <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black" />
-                            <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" />
-                            <img src="https://img.shields.io/badge/Flask-000000?style=for-the-badge&logo=flask&logoColor=white" />
-                            <img src="https://img.shields.io/badge/PostgreSQL-316192?style=for-the-badge&logo=postgresql&logoColor=white" />
+                            <p class="card-text">Tecnologias utilizadas neste site:</p>
+                            <div class="text-center">
+                                <img
+                                    src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" />
+                                <img
+                                    src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" />
+                                <img
+                                    src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black" />
+                                <img
+                                    src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" />
+                                <img
+                                    src="https://img.shields.io/badge/Flask-000000?style=for-the-badge&logo=flask&logoColor=white" />
+                                <img
+                                    src="https://img.shields.io/badge/PostgreSQL-316192?style=for-the-badge&logo=postgresql&logoColor=white" />
+                            </div>
                         </div>
+
+                        <button class="btn btn-primary btn-sm mt-3" onclick="toggleDescricao(this)">
+                            <span class="fas fa-plus"></span> Ver Mais
+                        </button>
+
                     </div>
                     <div class="card-footer">
                         <h6 class="card-subtitle">
-                            <img id="img_width_height" src="components/img/github.png" class="card-img mx-auto" alt="icone_github"> Repositório: <a class="card-link" href="https://github.com/Jana-SI/pet_lovers_crud">clique aqui</a></h6>
+                            <img id="img_width_height" src="components/img/github.png" class="card-img mx-auto"
+                                alt="icone_github"> Repositório: <a class="card-link"
+                                href="https://github.com/Jana-SI/pet_lovers_crud">clique aqui</a>
+                        </h6>
                     </div>
                 </div>
             </div>
@@ -62,50 +77,62 @@
             <div class="col">
                 <div class="card">
                     <div class="card-header">
-                        <h2 class="card-title">🪙 Projeto Cost - Curso React react <img
+                        <h5 class="card-title">🪙 Projeto Cost - Curso React react <img
                                 src="https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB" />
-                        </h2>
+                        </h5>
                     </div>
                     <img class="card-img" src="components/img/printCost.png">
                     <div class="card-body">
                         <p class="card-text">Projeto desenvolvido durante as aulas do curso de react (aula 16.5 ate 37)
                         </p>
 
-                        <h5 class="card-title">É composto por 2 secões:</h5>
+                        <div class="card-text-more" style="display: none;">
 
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">🏠 Home: tela de boas vindas, criar projeto;</li>
+                            <h5 class="card-title">É composto por 2 secões:</h5>
 
-                            <li class="list-group-item">⚒️ Projetos: exibir meus projetos, criar projeto, editar projeto e excluir projeto;                           
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">🏠 Home: tela de boas vindas, criar projeto;</li>
 
-                                <div class="ms-2 me-auto">
-                                    ✏️ Editar projeto: exibir detalhes do projeto (categoria,
+                                <li class="list-group-item">⚒️ Projetos: exibir meus projetos, criar projeto, editar projeto
+                                    e excluir projeto;
+
+                                    <div class="ms-2 me-auto">
+                                        ✏️ Editar projeto: exibir detalhes do projeto (categoria,
                                         total de orçamento, total utilizado, restante do orçamento), editar projeto,
                                         adicionar serviços, exibir serviços (nome do serviço, custo total e a descrição) e
                                         excluir serviço;
-                                  </div>
-                              
-                            </li>
+                                    </div>
 
-                            <li class="list-group-item">🏢 Empresa e 📞 Contato: criados para testar funcionalidade dos routes.</li>
-                        </ul>
+                                </li>
 
-                        <h5 class="card-title">⚙️ Rodar projeto</h5>
+                                <li class="list-group-item">🏢 Empresa e 📞 Contato: criados para testar funcionalidade dos
+                                    routes.</li>
+                            </ul>
 
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">npm start</li>
-                            <li class="list-group-item">npm run backend</li>
-                        </ul>
+                            <h5 class="card-title">⚙️ Rodar projeto</h5>
+
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">npm start</li>
+                                <li class="list-group-item">npm run backend</li>
+                            </ul>
                         
+                        </div>
+
+                        <button class="btn btn-sm mt-3" onclick="toggleDescricao(this)">
+                            <span class="fas fa-plus"></span> Ver Mais
+                        </button>
 
                     </div>
 
                     <div class="card-footer">
                         <h6 class="card-subtitle">💻 Curso: <a class="card-link"
-                            href="https://www.youtube.com/playlist?list=PLnDvRpP8BneyVA0SZ2okm-QBojomniQVO">Curso de React - Matheus Battisti - Hora de Coda</a></h6>
+                                href="https://www.youtube.com/playlist?list=PLnDvRpP8BneyVA0SZ2okm-QBojomniQVO">Curso de
+                                React - Matheus Battisti - Hora de Coda</a></h6><br>
                         <h6 class="card-subtitle">
-                            <img id="img_width_height" src="components/img/github.png" class="card-img mx-auto" alt="icone_github"> Repositório: <a class="card-link"
-                            href="https://github.com/Jana-SI/costs_projeto_curso_react">clique aqui</a></h6>
+                            <img id="img_width_height" src="components/img/github.png" class="card-img mx-auto"
+                                alt="icone_github"> Repositório: <a class="card-link"
+                                href="https://github.com/Jana-SI/costs_projeto_curso_react">clique aqui</a>
+                        </h6>
                     </div>
                 </div>
             </div>
