add de novo projeto e ajuste algumas paginas

--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -13,11 +13,11 @@
 <body>
     <div id="habilidades" class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 ">
         <h1>Habilidades</h1>
-        <div class="row row-2-cols-8 g-3 text-center">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 justify-content-center g-3 text-center">
             <div class="col">
-                <div class="card">
+                <div class="card mx-auto">
                     <div class="card-body">
-                        <img id="img_width_height" src="components/img/html5.png" class="card-img-top mx-auto" alt="icone_html5">
+                        <img id="img_width_height" src="components/img/habilidades/html5.png" class="card-img-top mx-auto" alt="icone_html5">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">HTML5</p>
@@ -25,9 +25,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card mx-auto">
                     <div class="card-body">
-                        <img id="img_width_height" src="components/img/css3.png" class="card-img-top mx-auto" alt="icone_css3">
+                        <img id="img_width_height" src="components/img/habilidades/css3.png" class="card-img-top mx-auto" alt="icone_css3">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">CSS3</p>
@@ -35,9 +35,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card mx-auto">
                     <div class="card-body">
-                        <img id="img_width_height" src="components/img/javascript.png" class="card-img-top mx-auto" alt="icone_JavaScript">
+                        <img id="img_width_height" src="components/img/habilidades/javascript.png" class="card-img-top mx-auto" alt="icone_JavaScript">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">JAVASCRIPT</p>
@@ -45,9 +45,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card mx-auto">
                     <div class="card-body">
-                        <img id="img_width_height" src="components/img/bootstrap.png" class="card-img-top mx-auto" alt="icone_Bootstrap">
+                        <img id="img_width_height" src="components/img/habilidades/bootstrap.png" class="card-img-top mx-auto" alt="icone_Bootstrap">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">BOOTSTRAP</p>
@@ -55,9 +55,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card mx-auto">
                     <div class="card-body">
-                        <img id="img_width_height" src="components/img/jquery.png" class="card-img-top mx-auto" alt="icone_jquery">
+                        <img id="img_width_height" src="components/img/habilidades/jquery.png" class="card-img-top mx-auto" alt="icone_jquery">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">JQUERY</p>
@@ -65,9 +65,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card mx-auto">
                     <div class="card-body">
-                        <img id="img_width" src="components/img/React-icon.svg" class="card-img-top mx-auto" alt="icone_react">
+                        <img id="img_width" src="components/img/habilidades/React-icon.svg" class="card-img-top mx-auto" alt="icone_react">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">REACT</p>
@@ -75,9 +75,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card mx-auto">
                     <div class="card-body">
-                        <img id="img_width_height" src="components/img/vue.png" class="card-img-top mx-auto" alt="icone_vue">
+                        <img id="img_width_height" src="components/img/habilidades/vue.png" class="card-img-top mx-auto" alt="icone_vue">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">VUE</p>
@@ -85,9 +85,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card mx-auto">
                     <div class="card-body">
-                        <img id="img_height" src="components/img/python.png" class="card-img-top mx-auto" alt="icone_python">
+                        <img id="img_height" src="components/img/habilidades/python.png" class="card-img-top mx-auto" alt="icone_python">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">PYTHON</p>
@@ -95,9 +95,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card mx-auto">
                     <div class="card-body">
-                        <img id="img_width_height" src="components/img/flask.png" class="card-img-top mx-auto" alt="icone_flask">
+                        <img id="img_width_height" src="components/img/habilidades/flask.png" class="card-img-top mx-auto" alt="icone_flask">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">FLASK</p>
@@ -105,9 +105,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card mx-auto">
                     <div class="card-body d-flex justify-content-center align-items-center flex-wrap">
-                        <img id="img_width" src="components/img/php.png" class="card-img-top mx-auto" alt="icone_php">
+                        <img id="img_width" src="components/img/habilidades/php.png" class="card-img-top mx-auto" alt="icone_php">
                     </div>
                     <div class="card-footer">
                         <p class="card-text">PHP</p>
@@ -115,9 +115,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card mx-auto">
                     <div class="card-body">
-                        <img id="img_height" src="components/img/postgresql.png" class="card-img-top mx-auto" alt="icone_postgresql">
+                        <img id="img_height" src="components/img/habilidades/postgresql.png" class="card-img-top mx-auto" alt="icone_postgresql">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">POSTGRESQL</p>
@@ -125,9 +125,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card mx-auto">
                     <div class="card-body">
-                        <img id="img_width_height" src="components/img/joomla.png" class="card-img-top mx-auto" alt="icone_joomla">
+                        <img id="img_width_height" src="components/img/habilidades/joomla.png" class="card-img-top mx-auto" alt="icone_joomla">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">JOOMLA</p>
@@ -135,9 +135,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card mx-auto">
                     <div class="card-body">
-                        <img id="img_width_height" src="components/img/wordpress.png" class="card-img-top mx-auto" alt="icone_wordpress">
+                        <img id="img_width_height" src="components/img/habilidades/wordpress.png" class="card-img-top mx-auto" alt="icone_wordpress">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">WORDPRESS</p>
@@ -145,9 +145,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card mx-auto">
                     <div class="card-body">
-                        <img id="img_width_height" src="components/img/git.png" class="card-img-top mx-auto" alt="icone_git">
+                        <img id="img_width_height" src="components/img/habilidades/git.png" class="card-img-top mx-auto" alt="icone_git">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">GIT</p>
@@ -155,9 +155,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card mx-auto">
                     <div class="card-body">
-                        <img id="img_width_height" src="components/img/github.png" class="card-img-top mx-auto" alt="icone_github">
+                        <img id="img_width_height" src="components/img/habilidades/github.png" class="card-img-top mx-auto" alt="icone_github">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">GITHUB</p>
@@ -165,12 +165,22 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card mx-auto">
                     <div class="card-body">
-                        <img id="img_width" src="components/img/figma.png" class="card-img-top mx-auto" alt="icone_figma">
+                        <img id="img_width" src="components/img/habilidades/figma.png" class="card-img-top mx-auto" alt="icone_figma">
                         </div>
                     <div class="card-footer">
                         <p class="card-text">FIGMA</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mx-auto">
+                    <div class="card-body">
+                        <img id="img_width" src="components/img/habilidades/laravel.png" class="card-img-top mx-auto" alt="icone_laravel">
+                        </div>
+                    <div class="card-footer">
+                        <p class="card-text">LARAVEL</p>
                     </div>
                 </div>
             </div>
