--- a/index.html
+++ b/index.html
@@ -4,29 +4,12 @@
 <head>
 
     <!--icon-->
-    <link rel="icon" type="image/x-icon" 
-    href="components/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="components/img/favicon.ico">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-        crossorigin="anonymous"></script>
-
-    <!-- Jquery -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-
-    <!-- Script -->
-    <script type="text/javascript" src="components/scripts/CarregamentoPagesMenu.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <!-- icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
@@ -47,39 +30,47 @@
 <body>
     <header id="menu">
         <nav>
-        <img id="imgMenu" src="components/img/img_menu.png" alt="img_menu" />
-        <ul class="nav justify-content-end">
-            <li class="nav-item">
-                <a class="ativado" href="pages/home.html" id="tooltipHome" title="Home">
-                    <span class="icon"><i class="bi bi-house-heart"></i></span>
-                    <span class="text">Home</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="pages/sobre.html" id="tooltipSobre" title="Sobre mim">
-                    <span class="icon"><i class="bi bi-person-circle"></i></span>
-                    <span class="text">Sobre</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="pages/habilidades.html" id="tooltipHabilidades" title="Habilidades">
-                    <span class="icon"><i class="bi bi-person-lines-fill"></i></span>
-                    <span class="text">Habilidades</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="pages/projetos.html" id="tooltipHProjetos" title="Projetos">
-                    <span class="icon"><i class="bi bi-person-gear"></i></span>
-                    <span class="text">Projetos</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
+            <img id="imgMenu" src="components/img/img_menu.png" alt="img_menu" />
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                    <a class="ativado" href="pages/home.html" id="tooltipHome" title="Home">
+                        <span class="icon"><i class="bi bi-house-heart"></i></span>
+                        <span class="text">Home</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="pages/sobre.html" id="tooltipSobre" title="Sobre mim">
+                        <span class="icon"><i class="bi bi-person-circle"></i></span>
+                        <span class="text">Sobre</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="pages/habilidades.html" id="tooltipHabilidades" title="Habilidades">
+                        <span class="icon"><i class="bi bi-person-lines-fill"></i></span>
+                        <span class="text">Habilidades</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="pages/projetos.html" id="tooltipHProjetos" title="Projetos">
+                        <span class="icon"><i class="bi bi-person-gear"></i></span>
+                        <span class="text">Projetos</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <div class="container-fluid">
         <div id="content" class="row justify-content-center align-items-center">
         </div>
     </div>
+    <!-- Bootstrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <!-- Jquery -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+
+    <!-- Script -->
+    <script type="text/javascript" src="components/scripts/CarregamentoPagesMenu.js"></script>
 </body>
 
 </html>
