--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -125,12 +125,7 @@
                                         aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-<<<<<<< HEAD
                                     <img src="components/img/projetos/printCost.png" class="card-img" alt="print_cost">
-=======
-                                    <img src="components/img/projetos/printCost.png" class="card-img"
-                                        alt="print_cost">
->>>>>>> cde57baf06bc1eb19bf138a89f3cd795d86df064
                                     <div class="card-body">
                                         <p class="card-text">Projeto desenvolvido durante as aulas do curso de react
                                             (aula 16.5 ate 37)
@@ -201,15 +196,9 @@
                     </div>
                     <img src="components/img/projetos/printHDCEventos.jpg" alt="print_HDC_eventos">
                     <div class="card-footer">
-<<<<<<< HEAD
                         <button class="btn btn-primary btn-sm mt-3" data-bs-toggle="modal" data-bs-target="#HDCEVentos">
-=======
-                        <button class="btn btn-primary btn-sm mt-3" data-bs-toggle="modal"
-                            data-bs-target="#HDCEVentos">
->>>>>>> cde57baf06bc1eb19bf138a89f3cd795d86df064
                             <span class="fas fa-plus"></span> Ver Mais
                         </button>
-
                     </div>
                     <!-- Modal -->
                     <div class="modal fade" id="HDCEVentos" tabindex="-1" aria-labelledby="HDCEVentosLabel"
@@ -219,18 +208,13 @@
                                 <!-- Conteúdo do modal -->
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="HDCEVentosLabel">🗓️ HDC Eventos<br>Curso Laravel <img
-<<<<<<< HEAD
                                             src="https://img.shields.io/badge/Laravel-FF2D20?style=for-the-badge&logo=laravel&logoColor=white" />
                                     </h5>
-=======
-                                        src="https://img.shields.io/badge/Laravel-FF2D20?style=for-the-badge&logo=laravel&logoColor=white" /></h5>
->>>>>>> cde57baf06bc1eb19bf138a89f3cd795d86df064
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                         aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                    <img src="components/img/projetos/printPetLovers.png" class="card-img"
-                                        alt="print_pet_lovers_crud">
+                                    <img src="components/img/projetos/printHDCEventos.jpg" alt="print_HDC_eventos" class="card-img">
                                     <div class="card-body">
                                         <p class="card-text">Projeto desenvolvido durante as aulas do curso de laravel
                                             (aula 13 até 31)
