ajustes css, js e html

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -165,6 +165,16 @@
                                             <li class="list-group-item">npm start</li>
                                             <li class="list-group-item">npm run backend</li>
                                         </ul>
+
+                                        <p class="card-text">Tecnologias utilizadas neste site:</p>
+                                        <div class="text-center">
+                                            <img
+                                                src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" />
+                                            <img
+                                                src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" />
+                                            <img
+                                                src="https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB" />
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="modal-footer">
@@ -213,7 +223,8 @@
                                         aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                    <img src="components/img/projetos/printHDCEventos.jpg" alt="print_HDC_eventos" class="card-img">
+                                    <img src="components/img/projetos/printHDCEventos.jpg" alt="print_HDC_eventos"
+                                        class="card-img">
                                     <div class="card-body">
                                         <p class="card-text">Projeto desenvolvido durante as aulas do curso de laravel
                                             (aula 13 até 31)
@@ -250,6 +261,19 @@
                                             <li class="list-group-item">xampp</li>
                                         </ul>
 
+                                        <p class="card-text">Tecnologias utilizadas neste site:</p>
+                                        <div class="text-center">
+                                            <img
+                                                src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" />
+                                            <img
+                                                src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" />
+                                            <img
+                                                src="https://img.shields.io/badge/Laravel-FF2D20?style=for-the-badge&logo=laravel&logoColor=white" />
+                                            <img
+                                                src="https://img.shields.io/badge/Bootstrap-563D7C?style=for-the-badge&logo=bootstrap&logoColor=white" />
+                                            <img
+                                                src="https://img.shields.io/badge/MySQL-00000F?style=for-the-badge&logo=mysql&logoColor=white">
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="modal-footer">
