--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 col-xxl-8">
+    <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 col-xxl-8" id="sobreMim">
         <div class="card mb-3">
             <div class="row g-0">
                 <div class="col-md-4 d-flex justify-content-center align-items-center">
