ajustes js e css

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="pages/projetos.html" id="tooltipHProjetos" title="Projetos">
+                    <a href="pages/projetos.html" id="tooltipProjetos" title="Projetos">
                         <span class="icon"><i class="bi bi-person-gear"></i></span>
                         <span class="text">Projetos</span>
                     </a>
