--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -71,6 +71,9 @@
                                                 src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" />
                                             <img
                                                 src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" />
+
+                                            <img
+                                                src="https://img.shields.io/badge/Bootstrap-563D7C?style=for-the-badge&logo=bootstrap&logoColor=white" />
                                             <img
                                                 src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black" />
                                             <img
@@ -101,7 +104,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-header">
-                        <h5 class="card-title">🪙 Projeto Cost<br>Curso React react <img
+                        <h5 class="card-title">🪙 Projeto Costs<br>Curso React react <img
                                 src="https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB" />
                         </h5>
                     </div>
@@ -117,7 +120,7 @@
                             <div class="modal-content">
                                 <!-- Conteúdo do modal -->
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="CostLabel">🪙 Projeto Cost<br>Curso React react <img
+                                    <h5 class="modal-title" id="CostLabel">🪙 Projeto Costs<br>Curso React react <img
                                             src="https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB" />
                                     </h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
@@ -267,6 +270,8 @@
                                                 src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" />
                                             <img
                                                 src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" />
+                                            <img
+                                                src="https://img.shields.io/badge/PHP-777BB4?style=for-the-badge&logo=php&logoColor=white">
                                             <img
                                                 src="https://img.shields.io/badge/Laravel-FF2D20?style=for-the-badge&logo=laravel&logoColor=white" />
                                             <img
